src/parser/snapshots/monkey_language_server__parser__test__hash_unhappy_4_errors.snap
---
source: src/parser/test.rs
description: "{1:2 2}"
expression: "parser_errors(\"{1:2 2}\", errors)"
---
{1:2 2}
     ^ SyntaxError: Expected ',' not found.
