src/parser/snapshots/monkey_language_server__parser__test__hash_unhappy_8_errors.snap
---
source: src/parser/test.rs
description: "{1:@}"
expression: "parser_errors(\"{1:@}\", errors)"
---
{1:@}
   ^ SyntaxError: Unexpected '@'.
