src/parser/snapshots/monkey_language_server__parser__test__identifier.snap
---
source: src/parser/test.rs
description: x
expression: result
---
[
    Identifier {
        token: Token(Identifier, "x", (0,0)->(0,1)),
        name: "x",
    },
]

===================================

x
