src/parser/snapshots/monkey_language_server__parser__test__if_expr_happy_2.snap
---
source: src/parser/test.rs
description: "if (x < y) { x }"
expression: result
---
[
    If {
        token: Token(If, "if", (0,0)->(0,2)),
        condition: Ok(
            Infix {
                token: Token(LT, "<", (0,6)->(0,7)),
                left: Identifier {
                    token: Token(Identifier, "x", (0,4)->(0,5)),
                    name: "x",
                },
                right: Identifier {
                    token: Token(Identifier, "y", (0,8)->(0,9)),
                    name: "y",
                },
                operator: Lt,
                range: Range {
                    start: Position {
                        line: 0,
                        character: 6,
                    },
                    end: Position {
                        line: 0,
                        character: 9,
                    },
                },
            },
        ),
        consequence: Ok(
            Block {
                token: Token(LBrace, "{", (0,11)->(0,12)),
                statements: [
                    Identifier {
                        token: Token(Identifier, "x", (0,13)->(0,14)),
                        name: "x",
                    },
                ],
                range: Range {
                    start: Position {
                        line: 0,
                        character: 11,
                    },
                    end: Position {
                        line: 0,
                        character: 15,
                    },
                },
            },
        ),
        alternative: Ok(
            None,
        ),
        range: Range {
            start: Position {
                line: 0,
                character: 0,
            },
            end: Position {
                line: 0,
                character: 16,
            },
        },
    },
]

===================================

if (x < y) { x }
