src/parser/snapshots/monkey_language_server__parser__test__if_expr_happy_2_errors.snap
---
source: src/parser/test.rs
description: "if (x < y) { x }"
expression: "parser_errors(\"if (x < y) { x }\", errors)"
---
if (x < y) { x }
